Adds jwt token security

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings" : {
     "DefaultConnection" : "Data Source=DataingApp.db"
   },
+  "AppSettings" : {
+    "Token" : "super secret key"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
