End of section 11

--- a/DatingApp.API/appsettings.Development.json
+++ b/DatingApp.API/appsettings.Development.json
@@ -1,9 +1,12 @@
 ﻿{
+  "CloudinarySettings": {
+    "CloudName": "mschwa",
+    "ApiKey": "883293498231933",
+    "ApiSecret": "smac6ly2HUHVSLn2ZfjyiXWF1cs"
+  },
   "ConnectionStrings" : {
     "DefaultConnection" : "Data Source=DataingApp.db"
   },
-  
-
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
