--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,4 +1,9 @@
 ﻿{
+  "CloudinarySettings": {
+    "CloudName": "mschwa",
+    "ApiKey": "883293498231933",
+    "ApiSecret": "smac6ly2HUHVSLn2ZfjyiXWF1cs"
+  },
   "ConnectionStrings" : {
     "DefaultConnection" : "Data Source=DataingApp.db"
   },
@@ -16,6 +21,6 @@
       "LogLevel": {
         "Default": "Warning"
       }
-    }
-  }
+    }    
+  } 
 }
