End of Chapter 12

--- a/DatingApp.API/appsettings.Development.json
+++ b/DatingApp.API/appsettings.Development.json
@@ -5,7 +5,7 @@
     "ApiSecret": "smac6ly2HUHVSLn2ZfjyiXWF1cs"
   },
   "ConnectionStrings" : {
-    "DefaultConnection" : "Data Source=DataingApp.db"
+    "DefaultConnection" : "Data Source=tcp:mschwa-datingdb.database.windows.net,1433;Initial Catalog=DataingAppDb;Persist Security Info=False;User ID=mschwa;Password=Cideloh7!@#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "IncludeScopes": false,
