--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -4,8 +4,8 @@
     "ApiKey": "883293498231933",
     "ApiSecret": "smac6ly2HUHVSLn2ZfjyiXWF1cs"
   },
-  "ConnectionStrings" : {
-    "DefaultConnection" : "Data Source=DataingApp.db"
+    "ConnectionStrings" : {
+    "DefaultConnection" : "Data Source=tcp:mschwa-datingdb.database.windows.net,1433;Initial Catalog=DataingAppDb;Persist Security Info=False;User ID=mschwa;Password=Cideloh7!@#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AppSettings" : {
     "Token" : "super secret key"
