--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -5,7 +5,7 @@
     "ApiSecret": "smac6ly2HUHVSLn2ZfjyiXWF1cs"
   },
   "ConnectionStrings" : {
-    "DefaultConnection" : "Data Source=DataingApp.db"
+    "DefaultConnection" : "Server=localhost;Database=datingapp;Uid=appuser;Pwd=Cideloh7"
   },
   "AppSettings" : {
     "Token" : "super secret key"
